--- a/.pylintrc
+++ b/.pylintrc
@@ -192,7 +192,7 @@ argument-naming-style=snake_case
 
 # Regular expression matching correct argument names. Overrides argument-
 # naming-style.
-argument-rgx=^[a-zA-Z][a-z0-9]*((_[a-z0-9]+)*)?$
+argument-rgx=^_?[a-zA-Z][a-z0-9]*((_[a-z0-9]+)*)?$
 
 # Naming style matching correct attribute names.
 attr-naming-style=snake_case
@@ -513,7 +513,7 @@ max-attributes=7
 max-bool-expr=5
 
 # Maximum number of branch for function / method body.
-max-branches=12
+max-branches=16
 
 # Maximum number of locals for function / method body.
 max-locals=15
@@ -525,7 +525,7 @@ max-parents=7
 max-public-methods=20
 
 # Maximum number of return / yield for function / method body.
-max-returns=6
+max-returns=12
 
 # Maximum number of statements in function / method body.
 max-statements=50
