--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,2 @@
-[nosetests]
-exe=True
-with-doctest=1
-with-coverage=1
-cover-package=are
-tests=are/are.py,test/
+[tool:pytest]
+addopts = --doctest-modules --ignore=docs --cov=are --cov-report term-missing
